# trot-geo-tracking

./: .dockerignore  .env  .eslintrc.js  .gitignore  CONTRIBUTING.md  Dockerfile  Geo-Tracking.md  Glossario.md  LICENSE  README.md  docker-compose.yml  fly.toml  index.html  jsconfig.json  manage.py  package-lock.json  package.json  pyproject.toml  tox.ini  uwsgi.ini  vite.config.js  vitest.config.js
.github/workflows/: ci.yaml  python-app-cd-flyio.yml  python-app-ci.yml
apimock/: package-lock.json  package.json
apimock/server/: index.js
apimock/server/controllers/: positions.js  tracks.js
apimock/server/data/: index.js  positions.json  tracks.json
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: config.js  tracks.api.js
frontend/src/plugins/: index.js  vuetify.js
geotracking/accounts/: apps.py  views.py
geotracking/base/: apps.py  views.py
geotracking/core/: admin.py  apps.py  models.py  schemas.py  views.py
geotracking/geotracking/: api.py  settings.py  urls.py  wsgi.py
notebooks/data/: 20240623_Pontos_Corrida13_Teste4.xlsx
public/: index.html  manifest.json  script.js
src/: App.vue  main.js
src/api/: config.js  db.json  positions.api.js  routes.json  tracks.api.js
src/components/: OpenLayerMapPointViewer.vue  OpenLayerMapViewer.vue
src/plugins/: index.js  openlayers.js
src/router/: index.js
src/store/: app.js  index.js  location.js  location.test.js  location.test.md
src/tests/: primeiro.test.js
src/views/: HomeView.vue  PercursoDetalheView.vue
(+32 files in other folders)
